@@ -395,10 +395,17 @@ times the command should be executed."
 				     (match-string count line-1)
 				   "")
 				 (if data-changed
-				     nethack-status-highlight-delay
-				   (if (> old-highlight-delay 0)
-				       (1- old-highlight-delay)
-				     0))))
+				     (* (if (eq (elt symbols-2 (1- count)) 'armor-class)
+					    -1 1)
+					(if (< (string-to-int (match-string count line-1))
+					       (string-to-int (elt old-status 1)))
+					 (- nethack-status-highlight-delay)
+					 nethack-status-highlight-delay))
+				   (cond ((> old-highlight-delay 0)
+					  (1- old-highlight-delay))
+					 ((< old-highlight-delay 0)
+					  (1+ old-highlight-delay))
+					 (t 0)))))
       (setq count (1- count))))
 
     ;; Parse the second line
@@ -411,31 +418,35 @@ times the command should be executed."
 				    0))
 	     (data-changed (not (string-equal (match-string count line-2)
 					      (elt old-status 1)))))
-      (add-to-list 'status (list (elt symbols-2 (1- count))
-				 (if (match-string count line-2)
-				     (match-string count line-2)
-				   "")
-				 (if data-changed
-				     nethack-status-highlight-delay
-				   (if (> old-highlight-delay 0)
-				       (1- old-highlight-delay)
-				     0))))
+	(add-to-list 'status (list (elt symbols-2 (1- count))
+				   (if (match-string count line-2)
+				       (match-string count line-2)
+				     "")
+				   (if data-changed
+				       (* (if (eq (elt symbols-2 (1- count)) 'armor-class)
+					      -1 1)
+					  (if (< (string-to-int (match-string count line-2)) 
+						 (string-to-int (elt old-status 1)))
+					  (- nethack-status-highlight-delay)
+					  nethack-status-highlight-delay))
+				     (cond ((> old-highlight-delay 0)
+					  (1- old-highlight-delay))
+					 ((< old-highlight-delay 0)
+					  (1+ old-highlight-delay))
+					 (t 0)))))
       (setq count (1- count))))
-
-
 
     ;; Fill in the flags
     (mapcar (function (lambda (pair)
-			(let* ((old-status (assoc (elt symbols-2 (1- count)) nethack-status-alist))
+			(let* ((old-status (assoc (car pair) nethack-status-alist))
 			       (old-highlight-delay (if (elt old-status 2)
 							(elt old-status 2)
-						      0))
-			       (data-changed (not (string-equal (match-string 0 line-2)
-								(elt old-status 1)))))
+						      0)))
 			  (if (string-match (cdr pair) line-2)
 			      (add-to-list 'status (list (car pair)
 							 (match-string 0 line-2)
-							 (if data-changed
+							 (if (not (string-equal (match-string 0 line-2)
+										(elt old-status 1)))
 							     nethack-status-highlight-delay
 							   (if (> old-highlight-delay 0)
 							       (1- old-highlight-delay)
@@ -485,10 +496,13 @@ times the command should be executed."
 			  (let ((case-fold-search nil)
 				(start 0))
 			    (when (string-match (cdr (assoc (elt l 0) match-phrase)) str)
-			      (setq str (replace-match (if (> (elt l 2) 0)
-							   (propertize (elt l 1) 
-								       'face 'nethack-red-face)
-							 (elt l 1))
+			      (setq str (replace-match (cond ((> (elt l 2) 0)
+							      (propertize (elt l 1) 
+									  'face 'nethack-green-face))
+							     ((< (elt l 2) 0)
+							      (propertize (elt l 1)
+									  'face 'nethack-red-face))
+							     (t (elt l 1)))
 						       t t str))))))
 	      nethack-status-alist)
       str))
