@@ -1,3 +1,11 @@
+2001-10-23  shawn  <sabetts@vcn.bc.ca>
+
+	* nethack.el (nethack-parse-status-lines): the highlight delay is
+	negative if the change in status is bad and positive when good.
+	(nethack-parse-status-lines, nethack-format-status): if the status
+	change is negative change the value to a red face, green if
+	positive.
+
 2001-10-22  Ryan Yeske  <rcyeske@vcn.bc.ca>
 
 	* nethack.el (nethack-process-filter): Do not send the return
